--- a/src/components/TaskOverview.css
+++ b/src/components/TaskOverview.css
@@ -14,7 +14,7 @@
 }
 
 .overview span {
-  font-family: 'Poppins-bold';
+  font-family: "Poppins-bold";
   font-weight: 900;
   width: 25px;
   text-align: center;
