--- a/src/components/TaskList.css
+++ b/src/components/TaskList.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: fit-content;
   margin: 50px 0;
+  padding-bottom: 35px;
+  border-bottom: 2px solid var(--grey-color);
 }
 
 .message {
