--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,33 @@
   font-family: 'Poppins-light';
   src: url(../src/fonts/Poppins/Poppins-Light.ttf)
 }
+
 @font-face {
   font-family: 'Poppins-bold';
   src: url(../src/fonts/Poppins/Poppins-Bold.ttf)
 }
+
+@font-face {
+  font-family: 'Nunito';
+  src: url(../src/fonts/Nunito/Nunito-ExtraBold.ttf);
+}
+
 :root {
   --primary-background-color: rgb(24, 24, 32);
   --secondary-background-color: rgb(33, 33, 43);
-  --orange-background-color: rgb(249, 87, 56);
   --onFocus-background-color: rgb(71, 71, 76);
   --grey-color: rgb(204, 204, 204);
+  --orange-background-color: rgb(249, 87, 56);
   --primary-text-color: rgb(255, 255, 255);
   --secondary-text-color: rgb(128, 128, 128);
 }
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   padding: 0;
@@ -32,6 +41,7 @@ body {
   background-color: var(--primary-background-color);
   margin-bottom: 300px;
 }
+
 code {
   font-family: "Poppins-light", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
