--- a/src/components/TaskOverview.module.css
+++ b/src/components/TaskOverview.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: flex-end;
   gap: 10px;
+  padding: var(--element-padding);
 }
 
 .overview div {
@@ -15,13 +16,12 @@
 
 .overview span {
   font-family: "Poppins-bold";
-  font-weight: 900;
   width: 25px;
   text-align: center;
   border-radius: 4px;
   margin-left: 8px;
   padding: 5px 2px;
-  background-color: var(--orange-background-color);
+  background-color: var(--secondary-background-color);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
