--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,6 @@
-@font-face {
-  font-family: 'Poppins-light';
-  src: url(../src/fonts/Poppins/Poppins-Light.ttf)
-}
-
-@font-face {
-  font-family: 'Poppins-bold';
-  src: url(../src/fonts/Poppins/Poppins-Bold.ttf)
-}
-
-@font-face {
-  font-family: 'Nunito';
-  src: url(../src/fonts/Nunito/Nunito-ExtraBold.ttf);
-}
-
-:root {
-  --primary-background-color: rgb(24, 24, 32);
-  --secondary-background-color: rgb(33, 33, 43);
-  --onFocus-background-color: rgb(71, 71, 76);
-  --grey-color: rgb(204, 204, 204);
-  --orange-background-color: rgb(249, 87, 56);
-  --primary-text-color: rgb(255, 255, 255);
-  --secondary-text-color: rgb(128, 128, 128);
-}
+@import url("./asset/styles/colors.css");
+@import url("./asset/styles/fonts.css");
+@import url("./asset/styles/variables.css");
 
 * {
   padding: 0;
@@ -30,16 +9,13 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins-light", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Poppins-light", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100vh;
-  background-color: var(--primary-background-color);
-  margin-bottom: 300px;
+  background-color: var(--primary-darkest-background-color);
 }
 
 code {
